# nlp-ad

./: JSON_scraper.py  app.py  data.ipynb  match_titles.py  poc.ipynb  pyproject.toml  readme.md  requirements.txt  stopwords.py  streamlit_app.py  tfidf.ipynb  workshops_tfidf.csv
JSON/: JSON_scraper.py  JSON_searcher.py
models/: tfidf_workshops.npz
ui_pages/: all.py  api_poc.py  catalog_search.py  cluster.py  home.py  keyword_extraction.py  simple_keyword.py  single.py  tfidf.py  title_similarity.py
