[tool.poetry]
name = "nlp-ad"
version = "0.1.0"
description = ""
authors = ["Scott Bailey <csb5t@virginia.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
pandas = "^1.2.0"
spacy = "^2.3.5"
ipykernel = "^5.4.3"
nltk = "^3.5"
textacy = "^0.10.1"
matplotlib = "^3.3.4"
jupyterlab = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
